[project]
name = ""
version = ""
description = ""
authors = [
    {name = "heko", email = "91366057+hkohko@users.noreply.github.com"},
]
dependencies = [
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.1",
    "python-dotenv>=1.0.0",
    "mypy>=1.6.1",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
